# chinesize

./: .gitignore
ACPX/: bytefile.py  exListBin.py  extBin.py  extBin2.py  game.txt  result.txt
ACPX/exListBin/: exListBin.py  list_def.toml
ACPX/hook_proj/: FileReader.cpp  FileReader.h  MemMan.cpp  hook.vcxproj  hook.vcxproj.filters  main.cpp  memman.h
ACPX/hook_proj2/: .gitignore  FuncHelper.cpp  NakedMemory.cpp  acpx.cpp  acpx.h  exp.def  main.cpp
ACPX/patch_for_codes/: 0002-fix-for-936-code-and-change-font.patch  0003-cvt-encoding.patch  0004-convert-some-text.patch
ARDScript/: game.txt
ARDScript/Pack/: extArd.py  extArdPic.py  extTxt.py  packArd.py  packTxt.py  testLine.py
AdvPlayer/: batch_extract_text.bat  ext_arc_pic.bat  game.txt
AdvPlayer/decWs2/: decWs2.go
AdvPlayer/extArc/: extArc.go  pack.py
AdvPlayer/extLua/: extLua.py
AdvPlayer/extWs2/: defaultInst.go  extws2.go
AdvPlayer/hook_proj2/: CMakeLists.txt  CMakeSettings.json  main.cpp  ws2.cpp  ws2.h
AdvTry/: game.txt
BGI/: extOldBgi.py  game.txt
BGI/Analyze/: bpas.py  (+6 more)
BGI/fxckBGI/extractor/: CMakeLists.txt  afxres.h  dllmain.cpp  ext.cpp  extractor.h  extractor.rc  extractor.vcxproj  extractor.vcxproj.filters  funcHelper.h  misc.cpp  misc.h  resource.h
BGI/fxckBGI/shell/: CMakeLists.txt  ShellDialog.cpp  fxckBGI.h  inject.cpp  resource.h  shell.h  shell.rc  shell.vcxproj  shell.vcxproj.filters  shellDialog.cpp
CatSystem2/: excst.py  exfes.py  exkcs.py  packNewKcs.py  packfes.py  proc.txt
Circus/: CIRCUS-without-alphablend.cui  cvtFull.py  exExe.py  exMg2d.py  exSce.py  exTxtWithPattern.py  game.txt  testChars.py  test_and_fix.py
DeboPak/: expak.py  game.txt  pkPak.py
DxLib/: exScr.py
DxLib/exBin/: CMakeLists.txt  main.cpp
DxLib/exBin/DxLib/: CMakeLists.txt  DxASyncLoad.cpp  DxASyncLoad.h  DxArchive_.cpp  DxArchive_.h  DxBaseFunc.cpp  DxBaseFunc.h  DxBaseImage.cpp  DxBaseImage.h  DxChar.cpp  DxChar.h  DxCharCodeTable.cpp  DxCompileConfig.h  DxDataType.h  DxDataTypeAndroid.h  DxDataTypeWin.h  DxDataTypeiOS.h  DxFile.cpp  DxFile.h  DxFont.cpp  DxFont.h  DxFunctionAndroid.h  DxFunctionWin.h  DxFunctioniOS.h  DxGateway.cpp  DxGraphics.cpp  DxGraphics.h  DxGraphicsFilter.cpp  DxGraphicsFilter.h  DxHandle.cpp  DxHandle.h  DxHeap.cpp  DxHeap.h  DxInput.cpp  DxInput.h  DxInputString.cpp  DxInputString.h  DxLib.h  DxLib.txt  DxLog.cpp  (+45 more)
DxLib/exBin/DxLib/Windows/: DxBaseFuncWin.cpp  DxBaseFuncWin.h  DxBaseImageWin.cpp  DxBaseImageWin.h  DxDirectX.h  DxFileWin.cpp  DxFileWin.h  DxFontWin.cpp  DxFontWin.h  DxGraphicsAPIWin.cpp  DxGraphicsAPIWin.h  DxGraphicsD3D11.cpp  DxGraphicsD3D11.h  DxGraphicsD3D9.cpp  DxGraphicsD3D9.h  DxGraphicsFilterD3D11.cpp  DxGraphicsFilterD3D11.h  DxGraphicsFilterD3D9.cpp  DxGraphicsFilterD3D9.h  DxGraphicsFilterWin.cpp  DxGraphicsFilterWin.h  DxGraphicsWin.cpp  DxGraphicsWin.h  DxGuid.cpp  DxGuid.h  DxInputWin.cpp  DxInputWin.h  DxKeyHook.c  DxKeyHookBinary.cpp  DxLogWin.cpp  DxLogWin.h  DxMaskD3D11.cpp  DxMaskD3D11.h  DxMaskD3D9.cpp  DxMaskD3D9.h  DxMaskWin.cpp  DxMaskWin.h  DxMemoryWin.cpp  DxMemoryWin.h  DxModelD3D11.cpp  (+37 more)
DxLib/exBin/gflags-2.2.2/: CMakeLists.txt
ExHIBIT/: game.txt
FAVORITE/: game.txt
FFDSystem/: extTxt.py  extballoon.py  game.txt  packBalloon.py  packTxt.py
GameScripter/: game.txt  scParser.py
GsWin/: game.txt
ISM/: game.txt
InnocentGrey/: game.txt  igscript.cpp  packIga.py  prescan.py
Jlist/: LZSS.C  game.txt
Liar/: game.txt
Lpg/: game.txt
Lucifen/: extSob.py  game.txt  sob_inst.txt
Majiro/: game.txt
Malie/: exdieslib.cpp  merge_dzi.pl  readme.txt
MgBase/: bntParser.py  exTxtFromBnt.py  exdat.py  extxt.py  game.txt  imptxt.py  packdat.py
N2System/: game.txt  rpcSpace.py
NeXAs/: exTxtFromDat.py  extTxtFromBin.py  game.txt  packTxtBin.py  packTxtDat.py  packpac.py
Others/: autoTrans.py  bytefile2.7.py  bytefile3.2.py  undoc_ntdll.lib
Overflow/: game.txt
Rugp/: readme.txt
Stuff/: game.txt
System4/: Strings.txt  game.txt
SystemC/: extptr.py  game.txt  pack_fpk.bat  pack_pic.bat  pack_text.bat  pack_txt.py  packfpk.py  packptr.py  txt_filter.py
Xuse/: 0100.txt  ef_idx.txt  extIndex.py  exttext.py  game.txt  packArc.py
_Utils/: bmp32topng.py
advwin32/: game.txt  scan.py
entis_gls/: game.txt  rename_error_encoding_files.py
kirikiri2/: csvParser.txt  krkr2exe字符集修改.txt
qlie/: exfp3_v3.idb  extText.py  packqliefp1.py  readme.txt
reallive/: extseen.py
yatagarasu/: game.txt
yuka_script/: YKSTool.py  game.txt  start.yks
yuris/: DecodeYbn.py  ExtYpf.py  game.txt  name.txt  repname.py  testLine.py  yurisybn.py  yurisybn3.0.py
常用/: AddEnter.py  autoTrans.py  map.py
(+1205 files in other folders)
